# Research_Agent

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
skills/clean-code/: SKILL.md
skills/dry-principles/: SKILL.md
skills/github-readme/: github-readme.md
skills/project-structure/: project-structure.md
src/: __init__.py  cli.py
src/application/: __init__.py  factory.py  research_workflow.py
src/config/: settings.py
src/core/: __init__.py  planner.py  ports.py  reporter.py  researcher.py  schemas.py  state.py  summarizer.py
src/data/memory/: chroma.sqlite3
src/data/outputs/: 20260505-144959-impacto-de-la-inteligencia-artificial-en-la-educaci-n.json  20260505-144959-impacto-de-la-inteligencia-artificial-en-la-educaci-n.md
src/llm/: __init__.py  ollama_client.py  prompts.py  research_assistant.py
src/memory/: __init__.py  chroma_store.py  json_store.py  store.py
src/reports/: __init__.py  writer.py
src/tools/: __init__.py  citations.py  web_search.py  webpage_reader.py
tests/: test_core_flow.py
