[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "Automatic research agent with Ollama, Tavily, and ChromaDB."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "cohorte5" }
]
dependencies = [
  "langchain-ollama",
  "langchain-tavily",
  "chromadb",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
research-agent = "src.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
